# olw2-sc008

./: .gitignore  README.md  data_extraction.py  dataset_summaries.py  pyproject.toml
.github/workflows/: draft-pdf.yml  draft-pdf2.yml
dem_processing/: dem_processing.py
gw/: hydrogeo_to_sites.py
joss/: metadata.yml  paper.bib  paper.md  webapp_fig.xcf
misc/: ecan_flow_extraction.py  ecan_wq_sensor_processing.py  error_selection.py  flow_extraction_at_sites.py  map_data_for mfe_presentation.py  power_calcs_at_4th_order_streams.py  power_calcs_at_all_lakes.py  power_calcs_at_monitored_lakes.py  power_calcs_at_monitored_lakes_for_bottom_line.py  power_calcs_at_sites.py  power_calcs_at_sites_gam.py  reaches_in_doc.py  river_sites_processing.py  rivers_catchments_to_file.py  tethys_flow_data.py
other/data_extraction/: data_extraction.py
other/misc/: es_wq_sensor_processing.py  lakes_monitored_sites_sd.py  land_cover_areas.py  power_calcs_at_te_hoiere_sites.py  waikato_stream_orders_rec.py
other/qgis/pokaiwhenua/: catchment.fgb  catchment.qmd
other/qgis/te_hoiere/: 11015241_rivers_land_cover_reductions.gpkg  te_hoiere.qgz  te_hoiere_catchments.qmd  te_hoiere_gw_sites.fgb  te_hoiere_sites.csv  te_hoiere_sites.fgb  te_hoiere_streams.fgb  te_hoiere_streams_3plus.gpkg  te_hoiere_wq_sites.fgb
processing/: main.py  utils.py
processing/ecology/: eco_catchment_stdev.py  eco_sims.py  eco_sims_catch.py
processing/gw/: gw_sims.py
processing/high_loads/: hl_process_loads.py
processing/lakes/: __init__.py  lakes_delineation.py  lakes_geo_processing.py  lakes_land_cover_assignment.py  lakes_marae.py  lakes_process_loads.py  lakes_route_reductions.py  lakes_sims.py  lakes_stdev_missing.py  lakes_stdev_model.py  lakes_stdev_monitored.py
processing/land_cover/: land_cover_reductions.py
processing/rivers/: rivers_assign_power_monitored.py  rivers_land_cover_assignment.py  rivers_monitoring_sites.py  rivers_route_reductions.py  rivers_sims.py
qgis/: basemap.qgz
qgis/pokaiwhenua/: gw_wells.fgb  gw_wells.qmd  pokaiwhenua.qgz  pokaiwhenua_catchment.gpkg
qgis/te_hoiere/: 11014353_rivers_land_cover_reductions.gpkg  11014952_rivers_land_cover_reductions.gpkg  11015241_rivers_land_cover_reductions.gpkg  11015442_rivers_land_cover_reductions.gpkg  te_hoiere.qgz  te_hoiere_catchments.fgb
web_app/: Dockerfile  Dockerfile_assets  docker-compose.yml  docker-swarm.yml  requirements.txt  testing.py
web_app/app/: app.py  callbacks.py  example1.py  gunicorn_conf.py  layouts.py  main.py  main_8000.py  main_iframe_8000.py  main_old.py  parameters.yml  utils.py
web_app/app/assets/: catch.pbf  catch_conc.pkl.zst  catch_error.pkl.zst  catch_reach_mapping.pkl.zst  dashExtensions_default.js  sims_1000.h5  sims_10000.h5  test_plan1.gpkg
web_app/app/in_progress/: rivers_hfl_sites.py
web_app/app/pages/: __init__.py  _rivers_wq.py  gw_wq.py  home.py  lakes_wq.py  lakes_wq_sites.py  lakes_wq_sites_improve.py  land_cover.py  rivers_eco.py  rivers_eco_sites.py  rivers_hfl.py  rivers_hfl_reaches.py  rivers_hfl_sites.py  rivers_wq.py  rivers_wq_site.py  rivers_wq_sites.py  (+2 more)
web_app/deploy_alt/: Dockerfile  Dockerfile_assets  docker-compose.yml  docker-swarm.yml
web_app/deploy_test/: docker-compose.yml  docker-swarm.yml
web_app/docs/: land_cover_methods.md
web_app/processing/: __init__.py  gw_assign_errors.py  gw_geo_processing.py  gw_sims.py  lake_rec_delineation.py  lakes_conc_error.py  lakes_delineation.py  lakes_geo_processing.py  lakes_land_cover_assignment.py  lakes_land_cover_extraction.py  lakes_locations.py  lakes_rec_delineation.py  lakes_sims.py  land_cover_extraction.py  land_cover_processing.py  land_cover_reductions.py  lcdb_processing.py  main.py  make_app_assets.py  plan_reductions.py  rec_assign_conc.py  rec_catch.py  rec_processing.py  rec_reach_mappings.py  rec_rivers_delineate.py  rivers_assign_conc.py  rivers_assign_errors.py  rivers_assign_errors_gam.py  rivers_assign_flow.py  rivers_assign_loads.py  rivers_catch.py  rivers_delineate.py  rivers_land_cover_assignment.py  rivers_land_cover_clean.py  rivers_land_cover_extraction.py  rivers_make_app_assets.py  rivers_monitoring_sites.py  rivers_reach_mappings.py  rivers_sims.py  rivers_sims_gam.py  (+3 more)
web_app/test_deploy/: Dockerfile  docker-compose.yml  docker-swarm.yml
(+3846 files in other folders)
