[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olw2-sc008"
version = '1.33'
description = ''
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Mike Kittridge", email = "mullenkamp1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['plotly==5.15.0',
                'dash==2.11.1',
                'pandas==1.5.3',
                'xarray==2022.06.0',
                'rtree==0.9.7',
                'flask-caching==2.0.2',
                'gunicorn==20.1.0',
                'requests==2.27.1',
                'zstandard==0.20.0',
                'orjson==3.6.7',
                'dash_leaflet==0.1.28',
                'shapely==2.0.1',
                'pyyaml',
                'scipy==1.9.2',
                'numpy==1.23.0',
                'pydantic==1.10',
                'numexpr==2.8.3',
                'numcodecs',
                'boto3==1.24.35',
                'jmespath==1.0.0',
                'werkzeug==2.0.3',
                'protobuf==3.20',
                'dash-bootstrap-components==1.4.1',
                'dash-mantine-components==0.12.1',
                'dash-extensions==1.0.1',
                'geobuf==1.1.1',
                'tethysts==4.5.15',
                'booklet==0.0.18',
                'hdf5tools==0.2.4',
                'gistools==1.2.27',
                'pyarrow==10.0.1',
                ]

[project.urls]
Documentation = "https://github.com/unknown/olw2-sc008#readme"
Issues = "https://github.com/unknown/olw2-sc008/issues"
Source = "https://github.com/unknown/olw2-sc008"

[tool.hatch.envs.default]
# type = "container"
# image = 'python:3.9-slim-bullseye'
python = "3.9"
dependencies = [
  "spyder-kernels==2.4",
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/olw2_sc008 tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["olw2_sc008"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["olw2_sc008", "tests"]
branch = true
parallel = true
omit = [
  "src/olw2_sc008/__about__.py",
]

[tool.coverage.paths]
olw2_sc008 = ["src/olw2_sc008", "*/olw2-sc008/src/olw2_sc008"]
tests = ["tests", "*/olw2-sc008/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
